--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "Sample Wear Mobile App"
 include ':mobile'
 include ':wear'
+include ':shared'
