--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -37,7 +37,7 @@ android {
 }
 
 dependencies {
-
+    // default implementations
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -45,4 +45,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // implement shared module
+    implementation project(path: ':shared')
+
+    // wearables API
+    implementation 'com.google.android.gms:play-services-wearable:11.6.0'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
