try ant connection sample

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+    // external libraries (ant)
+    implementation fileTree(dir: 'libs', include: '*.jar')
+
     // default implementations
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
