--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -49,7 +49,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     // Polar SDK
-    implementation fileTree(dir: 'libs', include: '*.aar')
+//    implementation fileTree(dir: 'libs', include: '*.aar')
+    implementation 'com.github.polarofficial:polar-ble-sdk:3.3.1'
 
     // implement shared module
     implementation project(path: ':shared')
