--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // Polar SDK
 //    implementation fileTree(dir: 'libs', include: '*.aar')
